Integrate Supabase persistence

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Populate these meta tags with your Supabase credentials or set window.__SUPABASE_URL__ / window.__SUPABASE_ANON_KEY__ before loading app.js. -->
+    <meta name="supabase-url" content="" />
+    <meta name="supabase-anon-key" content="" />
     <title>Group Availability Planner</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
